fix: header spacing

--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,7 @@ h3 {
 }
 
 #about {
+    margin-top: 15px;
     padding: 10px;
     font-size: 26px;
 }
